--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,27 +39,17 @@ a { color: inherit; text-decoration: none; }
    Navbar
 ========================= */
 .nav {
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  backdrop-filter: blur(10px);
   background: rgba(11, 15, 25, 0.7);
   border-bottom: 1px solid rgba(255, 255, 255, 0.12);
 }
 
-.nav__inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 14px 0;
-  gap: 10px;
-}
 
 .nav__links {
   display: flex;
-  gap: 14px;
+  justify-content: end;
+  gap: 20px;
   align-items: center;
-  flex-wrap: wrap;
+  padding: 14px ;
 }
 
 .logo { font-weight: 800; }
@@ -88,6 +78,10 @@ a { color: inherit; text-decoration: none; }
 .btn-contact {
   font-size: 40px;
   margin: .5rem;
+}
+
+.btn-cv {
+  margin-top: 1rem;
 }
 
 /* =========================
@@ -184,6 +178,17 @@ a { color: inherit; text-decoration: none; }
 /* =========================
    Avatar (siempre redondo)
 ========================= */
+.avatar::before {
+  content: "";
+  position: absolute;
+  inset: -40%;
+  background:
+    radial-gradient(circle at 30% 20%, rgba(93,104,255,.35), transparent 45%),
+    radial-gradient(circle at 70% 60%, rgba(255,93,168,.28), transparent 45%);
+  filter: blur(10px);
+}
+
+
 .avatar {
   width: min(320px, 70vw);
   aspect-ratio: 1 / 1;
@@ -196,15 +201,7 @@ a { color: inherit; text-decoration: none; }
   overflow: hidden;
 }
 
-.avatar::before {
-  content: "";
-  position: absolute;
-  inset: -40%;
-  background:
-    radial-gradient(circle at 30% 20%, rgba(93,104,255,.35), transparent 45%),
-    radial-gradient(circle at 70% 60%, rgba(255,93,168,.28), transparent 45%);
-  filter: blur(10px);
-}
+
 
 .avatar__inner {
   position: relative;
